
HEAD

  Internals:

    * Changelog updates [smtlaissezfaire]
    * Upgrade to rspec 3.x [smtlaissezfaire, sgnn7]

--------------------------------------

0.13.1 - 2014-11-18

  Enhancements:

    * Add counter caching [smtlaissezfaire]

        belongs_to :user, :counter_cache => true
        belongs_to :user, :counter_cache => :custom_posts_count

    * Add Symbol type [miyucy]
    * Add the ability to easily query collection stats:  [sgnn7]

      MyModel.stats.snake_cased_field

  Bug Fixes:

    * Proxy#send should work with blocks and procs [mgroeneman]
    * Support inheriting OneAssociation. [DimaSamodurov]
    * write_attribute should return a type casted value [smtlaissezfaire]
    * Fix remove_validations_for for AS 4.1 [cpmurphy]
    * Fix autosupport loading issue (See rails issue 14664), and add test for ruby 2.1.1 [leifcr]
    * Fix syntax error in rescue response declarations for rails < 3.2 was causing MongoMapper::DocumentNotFound exceptions to cause an exception in WebBrick's exception handling in development. [bsoule]

  Internals:

    * Lock rest-client to 1.6.7 to ensure installation on 1.8.7
    * Added error message: can't mass assign protected attribute. This should be deprecated for proper protected_attributes support down the road.  [ThomasAlxDmy]
    * Add a spec to check for extra whitespace in files [rthbound]

0.13.0 - 2014-05-2014

  Enhancements:

    * Rails 4 support! [cheald]
    * Added error message: can't mass assign protected attribute [tdmytryk@fanhattan.com]
    * Add Integer#from_mongo. [cheald][#533]
    * Normalize IDs passed to #find!, so that it may accept an unsplatted array of IDs, just like #find. [cheald][#468][#469].
    * Performance Improvements to: typecasting, identity map, etc. (see a60b04c) [cheald]
    * Upgrade safe semantics to be consistent with the new MongoClient safe semantics (:safe => true is now on by default) [cheald]